minimum length for each box to ensure visibility

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -98,8 +98,8 @@ body {
 	border: none;
 	margin: 0;
 	padding: 0;
-	width: 30px;
-	height: 30px;
+	min-width: 30px;
+	min-height: 30px;
 	background-color: white;
 }
 
